# Kroma

./: .env.example  .gitignore  DB_Schema_Audit_—_Current_vs_Target.md  IMAGE_API_TOOL_FROM_SCRATCH.md  LICENSE  NEXT_CHAT_HANDOFF.md  README.md  TECH_SPEC.md  codeu.sh  package.json
src-tauri/: Cargo.toml  README.md
src-tauri/src/: lib.rs  main.rs
src-tauri/src/api/: agent_instructions.rs  analytics.rs  asset_links.rs  audit.rs  auth.rs  bootstrap.rs  characters.rs  chat.rs  error.rs  exports.rs  handler_utils.rs  mod.rs  projects.rs  prompt_templates.rs  provider_accounts.rs  reference_sets.rs  response.rs  routes.rs  runs_assets.rs  secrets.rs  server.rs  style_guides.rs  voice.rs
src-tauri/src/contract/: mod.rs  openapi.rs
src-tauri/src/db/: mod.rs  projects.rs
src-tauri/src/db/projects/: analytics_exports.rs  auth_audit.rs  bootstrap.rs  chat_instructions.rs  pipeline_ingest.rs  prompt_templates.rs  provider_style_character.rs  reference_sets.rs  runs_assets.rs  secrets.rs  voice_secrets.rs
src-tauri/src/pipeline/: backend_ops.rs  config_validation.rs  dry_run_execution.rs  execution.rs  mod.rs  pathing.rs  planning.rs  planning_preflight.rs  post_run.rs  post_run_execution.rs  postprocess_planning.rs  request_settings.rs  run_mode_execution.rs  runlog.rs  runlog_enrich.rs  runlog_parse.rs  runlog_patch.rs  runtime.rs  runtime_orchestrators.rs  runtime_stack.rs  settings_layer.rs  tool_adapters.rs  trigger.rs
src-tauri/src/pipeline/tool_adapters/: bgremove_config.rs  color_config.rs  color_ops.rs  dotenv_utils.rs  file_ops.rs  pathing.rs  qa_report.rs  upscale_config.rs
src-tauri/src/storage/: mod.rs
src-tauri/src/worker/: mod.rs
src-tauri/tests/: agent_instructions_endpoints.rs  analytics_endpoints.rs  asset_links_endpoints.rs  auth_endpoints.rs  bootstrap_endpoints.rs  characters_endpoints.rs  chat_endpoints.rs  contract_parity.rs  contract_smoke.rs  error_taxonomy_endpoints.rs  exports_endpoints.rs  http_contract_surface.rs  pipeline_trigger_endpoints.rs  projects_endpoints.rs  prompt_templates_endpoints.rs  provider_accounts_endpoints.rs  reference_sets_endpoints.rs  runs_assets_endpoints.rs  secrets_endpoints.rs  storage_endpoints.rs  style_guides_endpoints.rs  voice_endpoints.rs
src-tauri/var/backend/: app.db
(+58 files in other folders)
