[package]
name = "kroma-backend-core"
version = "0.1.0"
edition = "2021"
description = "Kroma Rust backend core scaffold with API contract parity tests."
license = "UNLICENSED"
publish = false

[lib]
name = "kroma_backend_core"
path = "src/lib.rs"

[[bin]]
name = "kroma-backend-core"
path = "src/main.rs"

[dependencies]
axum = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "net"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.18", features = ["v4"] }

[dev-dependencies]
pretty_assertions = "1.4"
tower = { version = "0.5", features = ["util"] }
